Current
Fixed: GITHUB-2363: JS error when switching theme (Krishnan Mahadevan)
Fixed: GITHUB-2361: No way to enforce @Test(singleThreaded = true) when test defined in base class (Krishnan Mahadevan)
Fixed: GITHUB-2343: Injectors are not reused when they share the same set of modules (Krishnan Mahadevan)
Fixed: GITHUB-2346: ITestResult attributes are null when retrieved by Listener onTestStart if test fails at BeforeMethod (Krishnan Mahadevan)
Fixed: GITHUB-2357: TestNG 7.3.0 transitive dependencies

7.3.0
Fixed: GITHUB-2328: Add ability to get test method for which configuration method was called (Krishnan Mahadevan)
Fixed: GITHUB-2327: Parameters not present on skipped Test (Eric Kubenka)
Fixed: GITHUB-2232: Null Pointer Exception in ConfigInvoker.setMethodInvocationFailure (Krishnan Mahadevan)
Fixed: GITHUB-2312: IAnnotationTransformer called multiple time Discrepancy between 6.x and 7.x (Krishnan Mahadevan)
New:   GITHUB-2315: TextReporter console output does not nicely print native array data parameters (James Sassano)
Fixed: GITHUB-2301: Add support for object-based reporter configurations (Scott Babcock)
New: Deprecate org.testng.ReporterConfig (Julien Herr)
Fixed: GITHUB-2300: Vulnerable Dependency: Please upgrade JCommander to 1.75 or above (Krishnan Mahadevan)
Fixed: GITHUB-2182: Removed exception catching as valid behaviour
Fixed: GITHUB-2273: Use SPI to load Guice modules (Bartosz Popiela)
Fixed: GITHUB-2280: Prevent Retry from happening endlessly (Paweł Nadolski)
Fixed: GITHUB-553:  Better error message when dealing with classes having both Constructor and Factory methods (Krishnan Mahadevan)
Fixed: GITHUB-2267: RetryAnalyzer is not set properly and consistent when using dataprovider (Eric Kubenka)
Fixed: GITHUB-2266: Support Test retries via Callbacks (Krishnan Mahadevan)
Fixed: GITHUB-2209: @Before and @After are not executed as expected when a combination of class and method level grouping is applied (Krishnan Mahadevan)