@@ -1,0 +1,9 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<!DOCTYPE suite SYSTEM "https://testng.org/testng-1.0.dtd">
+<suite verbose="2" name="test_parallel_mode" parallel="instances">
+    <test thread-count="5" verbose="2" name="test_data_provider_in_instance_parallel_mode" parallel="instances">
+        <classes>
+            <class name="test.testng2321.TestMultipleInstance"/>
+        </classes>
+    </test>
+</suite>
