@@ -1,4 +1,5 @@
 Current
+Fixed: GITHUB-2321: -Dtestng.thread.affinity=true do not work when running multiple instance of test in parallel
 Fixed: GITHUB-2363: JS error when switching theme (Krishnan Mahadevan)
 Fixed: GITHUB-2361: No way to enforce @Test(singleThreaded = true) when test defined in base class (Krishnan Mahadevan)
 Fixed: GITHUB-2343: Injectors are not reused when they share the same set of modules (Krishnan Mahadevan)
